Removed transaction and workspace plugin
Change-Id: I13fc0d766d2ac540735dd95df0850110c6bdb63e

--- a/build.properties
+++ b/build.properties
@@ -8,10 +8,8 @@
 # Contributors:
 #     Fraunhofer IWU - initial API and implementation
 ###############################################################################
-source.. = src/
+source.. = src/,\
+           test/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               lib/elmo-codegen-1.0-SNAPSHOT.jar,\
-               lib/elmo-owl-1.0-SNAPSHOT.jar,\
-               lib/elmo-rdfs-1.0-SNAPSHOT.jar
+               .
