Rename group KOMMA Mirror Group to KOMMA Mirror github

--- a/project.config
+++ b/project.config
@@ -2,4 +2,4 @@
 	inheritFrom = komma
 [access "refs/*"]
 	owner = group Repository Administrators
-	read = group KOMMA Mirror Group
+	read = group KOMMA Mirror github
