--- a/project.config
+++ b/project.config
@@ -2,4 +2,4 @@
 	inheritFrom = komma
 [access "refs/*"]
 	owner = group Repository Administrators
-	read = group KOMMA Mirror github
+	read = group KOMMA-MIRROR-github
